samples/_failures_safe/1761097671_fe8bcc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_943932d9.c: In function ‘main’:
./samples/SAFE/__tmp_943932d9.c:158:9: error: expected expression at end of input
  158 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_943932d9.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_943932d9.c:158:9: error: expected declaration or statement at end of input
